TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/Inventory_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Inventory Line Item</label>
    <nameField>
        <displayFormat>ILI-{000000}</displayFormat>
        <label>Inventory Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>