TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/fields/Age_at_replenishment__c.field-meta.xml
<CustomField>
    <fullName>Age_at_replenishment__c</fullName>
    <description>This field describes the age that the inventory line item is at when the stock is replaced by the sales rep.</description>
    <label>Age at replenishment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>