TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Inventory Line Items</relationshipLabel>
    <relationshipName>Inventory_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>