TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/fields/PreviousQuantity__c.field-meta.xml
<CustomField>
    <fullName>PreviousQuantity__c</fullName>
    <label>Previous Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>