TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.Item_Status__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <filterItems>
            <field>Product2.Item_Status__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventory Line Items</relationshipLabel>
    <relationshipName>Inventory_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>