TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/fields/Product_description__c.field-meta.xml
<CustomField>
    <fullName>Product_description__c</fullName>
    <formula>Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product description</label>
    <type>Text</type>
</CustomField>