TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/fields/ProductDateCode__c.field-meta.xml
<CustomField>
    <fullName>ProductDateCode__c</fullName>
    <label>Product Date Code</label>
    <type>Date</type>
</CustomField>