TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/fields/ResalePrice__c.field-meta.xml
<CustomField>
    <fullName>ResalePrice__c</fullName>
    <label>Resale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>