TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/fields/WholeSale__c.field-meta.xml
<CustomField>
    <fullName>WholeSale__c</fullName>
    <label>Whole Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>