TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/fields/WholeSaleMargin__c.field-meta.xml
<CustomField>
    <fullName>WholeSaleMargin__c</fullName>
    <formula>IF( (!ISBLANK(ResalePrice__c) &amp;&amp; !ISBLANK(ResalePrice__c)) ,(( ResalePrice__c - WholeSale__c )*100)/ResalePrice__c  ,0)</formula>
    <label>Whole Sale Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>