TradeMarketing/force-app/main/default/objects/Inventory_Line_Item__c/validationRules/Cant_create_Inventory_LI_for_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_create_Inventory_LI_for_past</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(Inventory__r.Visit_Date__c &lt; Today(), ISNEW(), $User.ProfileId != &apos;00ef4000000ELT6&apos;))</errorConditionFormula>
    <errorMessage>You can&apos;t create Inventory Line Item if inventory in the past.</errorMessage>
</ValidationRule>